# intc

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: encode.rs  fdr.rs  inc.rs  lib.rs  main.rs  mwu.rs  rank_test.rs  result.rs  utils.rs
