[package]
name = "intc"
version = "0.1.2"
edition = "2021"
description = "An implementation of the *-INC method to calculate an empirical FDR for non-targeting controls in CRISPR screens "
license = "MIT"
documentation = "https://docs.rs/intc"
repository = "https://github.com/noamteyssier/intc"
keywords = ["CRISPR", "bioinformatics", "sequencing", "sgRNA"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
hashbrown = "0.13.2"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
statrs = "0.16.0"
